# lib-ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/: lib_ml_team11.py
src/lib_ml_team11/: __init__.py  preprocessing.py
