[build-system]
requires = ["poetry-core>=1.5.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "lib-ml-team11"
version = "0.0.0"
description = "Contains the pre-processing logic for data that is used for training or queries."
authors = ["team_11 <E.Sipols@student.tudelft.nl>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "2.16.1"
keras = "3.3.3"
scikit-learn = "1.4.2"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.poetry-dynamic-versioning]
enable = true
vcs = 'git'
style = 'pep440'
